# external-ECUs-gateway

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  diagnostic.cpp  install.sh  vsomeip.json
docker-boost-build/: Dockerfile
docker-server-udp-service-build/: Dockerfile
docker-vsomeip-build/: Dockerfile
docker-vsomeip-build/vsomeip/: CMakeLists.txt
docker-vsomeip-build/vsomeip/implementation/configuration/include/: internal.hpp
docker-vsomeip-build/vsomeip/implementation/endpoints/src/: netlink_connector.cpp
include/: main.hpp  server.hpp
prog/: CMakeLists.txt  diagnostic.cpp
src/: CMakeLists.txt  test
src/include/: serverConf.hpp
src/include/server_service/: CMakeLists.txt  MsgHandler.cpp  MsgHandler.hpp  Server.cpp  Server.hpp  msg.hpp
src/include/someipService/: CMakeLists.txt  ServiceManagerAdapter.cpp  ServiceManagerAdapter.hpp
src/src/: server_udp.cpp
